<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
            android:key="example_switch"
            android:title="@string/pref_title_social_recommendations"
            android:summary="@string/pref_description_social_recommendations"
            android:defaultValue="true"/>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <EditTextPreference
            android:key="example_text"
            android:title="@string/pref_title_display_name"
            android:defaultValue="@string/pref_default_display_name"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1"/>
</PreferenceScreen>
