<?xml version="1.0" encoding="utf-8"?><!--
   Copyright 2019 Chris Margonis

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:elevation="6dp"
                android:src="@drawable/dw2logo_500"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.AppCompat.Subhead.Inverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/app_name_formatted" />

            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/app_version" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/about_description" />

            <TextView
                android:id="@+id/forum_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/about_forum_thread_dw2" />

            <TextView
                android:id="@+id/forum_link_dw2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:paddingTop="12dp"
                android:text="@string/about_forum_thread" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/redirect_animator"
        layout="@layout/redirect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
